--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
+    "@tosspayments/payment-sdk": "^1.9.2",
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.8.0",
     "lucide-react": "^0.505.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
