--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/generate-sw.js && tsc -b && vite build",
+    "build": "node scripts/generate-vercel-config.js && node scripts/generate-sw.js && tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint ."
   },
