Fix: OAuth2 callback을 프론트엔드에서 처리하도록 수정
Vercel rewrite 규칙을 /oauth2/authorization/*만 백엔드로 프록시하도록 변경
/oauth2/callback은 프론트엔드 React Router에서 처리

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
       "destination": "https://api.studycard.kr/api/:path*"
     },
     {
-      "source": "/oauth2/:path*",
-      "destination": "https://api.studycard.kr/oauth2/:path*"
+      "source": "/oauth2/authorization/:path*",
+      "destination": "https://api.studycard.kr/oauth2/authorization/:path*"
     }
   ]
 }
