Fix: Vercel SPA fallback 설정 추가
모든 경로를 index.html로 fallback하여 React Router가 처리하도록 수정

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "source": "/oauth2/authorization/:path*",
       "destination": "https://api.studycard.kr/oauth2/authorization/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
