--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
     "@tosspayments/tosspayments-sdk": "^2.5.0",
-    "axios": "^1.13.4",
+    "axios": "1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.8.0",
