--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tosspayments/tosspayments-sdk": "^2.5.0",
     "axios": "1.13.5",
     "class-variance-authority": "^0.7.1",
